# proof-of-burn-stwo

./: .gitignore  README.md  generate_m31_constants.sage
docs/: README.md  STATUS.md
docs/changelogs/: constants.md  fri.md
docs/cryptography/: POSEIDON2_CONSTANTS.md
docs/implementation/: STWO_IMPLEMENTATION.md
docs/security/: SECURITY_FIX_APPLIED.md
prover/: Cargo.toml  README.md  debug_constraints.rs
prover/examples/: generate_dummy_mpt.rs
prover/src/: constants.rs  field.rs  lib.rs  main.rs  prover.rs
prover/src/circuits/: mod.rs  proof_of_burn.rs  proof_of_burn_air.rs  spend.rs  spend_air.rs
prover/src/utils/: burn_address.rs  keccak.rs  mod.rs  mpt.rs  poseidon.rs  poseidon2_stwo.rs  pow.rs  rlp.rs
prover/tests/: boundary_tests.rs  circuit_logic_tests.rs  field_arithmetic_tests.rs  integration_tests.rs  poseidon_hash_tests.rs  stwo_integration.rs
